--- a/pr-validation.yml
+++ b/pr-validation.yml
@@ -18,8 +18,9 @@ variables:
   TF_VERSION: "1.9.0"
   TF_IN_AUTOMATION: "true"
 
+# UPDATED: Pointing to your new Spot Instance VMSS Pool
 pool:
-  name: "nikhil-self-hosted-agent"
+  name: "production-spot-agents"
 
 stages:
   - stage: Validate
@@ -30,17 +31,23 @@ stages:
         steps:
           # Install Terraform
           - script: |
-              echo "=== Installing Terraform $(TF_VERSION) ==="
+              echo "=== Installing Prerequisites ==="
+              sudo apt-get update -y
+              sudo apt-get install -y unzip wget
+
+              echo "=== Installing Terraform $(TF_VERSION) === "
               wget -q https://releases.hashicorp.com/terraform/$(TF_VERSION)/terraform_$(TF_VERSION)_linux_amd64.zip
               unzip -q terraform_$(TF_VERSION)_linux_amd64.zip
               sudo mv terraform /usr/local/bin/
+
+              echo "=== Verifying Installation ==="
               terraform version
               echo "✅ Terraform installed"
-            displayName: "Install Terraform"
+            displayName: "Install Terraform & dependencies"
 
           # Format Check
           - script: |
-              echo "=== Terraform Format Check ==="
+              echo "=== Terraform Format Check === "
               if ! find . -name "*.tf" -type f | grep -q .; then
                 echo "⚠️  No .tf files found - skipping"
                 exit 0
